small style changes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
   <div id="basicMap"></div>
-
-  <div id="status">Unknown<br /><span style="font-size:10px">Please enable JavaScript</span></div>
+  <div id="content">
+    <div id="status">Unknown<br /></div>
+    <div id="time">Please enable Javascript</div>
+  </div>
   <div id="aside">
     <h1>Dooris @ HUM53</h1>
     <div id="info">
@@ -26,7 +28,6 @@
 
     </div>
     <br><br>
-    <span id="time">Please enable JavaScript</span>
     <div id="footer">
       <a href="http://hamburg.ccc.de" target="_blank">CCC Hansestadt Hamburg e.V.</a> |
       <a href="https://github.com/zeidlos/dooris_frontend">Get code @ github.</a>
