--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="content">
-    <div id="status">Unknown<br /></div>
+    <div id="status"></div>
   </div>
   <div id="aside">
     <h1>Dooris @ HUM53</h1>
