Fixed DHCP Client Number and added Viewport Metatag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Door Information System @ HUM53</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 </head>
 <body>
   <div id="content">
