--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       N 53 &deg; 34.454'<br/>E 10 &deg; 01.472'
     </div>
     <div id="nav">
-      <a href="http://www.openstreetmap.org/?minlon=10.0244808197021&minlat=53.5743103027344&maxlon=10.0244817733765&maxlat=53.5743141174316" target="_blank">Map</a> | <a href="http://geofox.hvv.de/jsf/home.seam?destType=1&destName=Humboldtstra%DFe%2053&destRegion=Hamburg" target="_blank">Public Transport</a>
+      <a href="http://www.openstreetmap.org/?minlon=10.0244808197021&amp;minlat=53.5743103027344&am;maxlon=10.0244817733765&amp;maxlat=53.5743141174316" target="_blank">Map</a> | <a href="http://geofox.hvv.de/jsf/home.seam?destType=1&amp;destName=Humboldtstra%DFe%2053&destRegion=Hamburg" target="_blank">Public Transport</a>
     </div>
     <div id="further">
       You can also contact us via<br />
@@ -36,6 +36,6 @@
 
 
 </body>
-<script src="jquery-1.9.0.min.js"></script>
+<script type="text/javascript" src="jquery-1.9.0.min.js"></script>
 <script type="text/javascript" src="dooris.js"></script>
 </html>
