correct irc network

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="further">
       You can also contact us via<br />
       mail@hamburg.ccc.de<br />
-      or join #ccchh @ IRCNet.
+      or join #ccchh @ hackint.
     </div>
     <br><br>
     <div id="time">Please enable Javascript</div>
